--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ next-env.d.ts
 
 # clerk configuration (can include secrets)
 /.clerk/
+
+# PWA files
+public/sw.js
+public/sw.js.map
+
+.env
+.env.local 
+.env.development.local
+.env.test.local
+.env.production.local
