--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.4",
+    "@serwist/next": "^9.2.3",
+    "@serwist/precaching": "^9.2.3",
+    "@serwist/sw": "^9.2.3",
     "@uploadthing/react": "^7.3.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
